reimplement as a compiler plugin to disable checked exception checks